--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@angular/core": "^19.1.0",
     "@angular/forms": "^19.1.0",
     "@angular/material": "^19.1.0",
+    "@angular/material-moment-adapter": "^19.1.2",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^11.0.5",
